--- a/index.html
+++ b/index.html
@@ -5,209 +5,236 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>RDMWebTech.com – Modern Web Development</title>
-    <meta name="description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
-    <meta name="keywords" content="Web Development, UI/UX Design, Angular, React, .NET Core, MSSQL, Firebase, Modern Web Apps, RDMWebTech">
-    <meta name="author" content="RDMWebTech">
-    <!-- Google Site Verification -->
-    <meta name="google-site-verification" content="SWvx-B6xCdZqbUD8SgnCO0i7UrLIqXV0KJA4grmvJRE" />
 
-    <!-- Open Graph / Social Media -->
+    <!-- SEO -->
+    <meta name="description"
+        content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
+    <meta name="keywords"
+        content="Web Development, UI/UX Design, Angular, React, .NET Core, MSSQL, Firebase, Modern Web Apps, RDMWebTech">
+    <meta name="author" content="RDMWebTech">
+
+    <!-- Open Graph -->
     <meta property="og:title" content="RDMWebTech.com – Modern Web Development">
-    <meta property="og:description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
+    <meta property="og:description" content="Modern, scalable and secure web applications for businesses.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://rdmwebtech.com/">
     <meta property="og:image" content="https://rdmwebtech.com/images/og-image.png">
 
-    <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="RDMWebTech.com – Modern Web Development">
-    <meta name="twitter:description" content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
-    <meta name="twitter:image" content="https://rdmwebtech.com/images/og-image.png">
-
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 
-    <!-- Bootstrap CSS -->
+    <!-- Bootstrap + Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
         body {
-            scroll-behavior: smooth;
             font-family: 'Segoe UI', sans-serif;
+            scroll-behavior: smooth;
             background: #f5f7fa;
         }
 
-        /* HEADER */
         header {
             position: fixed;
-            top: 0;
             width: 100%;
+            top: 0;
             z-index: 999;
-            background-color: #111;
+            background: #111;
         }
 
         .navbar-nav .nav-link {
             color: #fff !important;
-            font-weight: 500;
             margin-left: 20px;
+            font-weight: 500;
         }
 
-        .navbar-nav .nav-link:hover {
+        .nav-link:hover {
             color: #0d6efd !important;
         }
 
-        /* HERO SECTION */
+        html {
+            scroll-padding-top: 80px;
+        }
+
+        /* Modern Hero Section */
         #home {
-            padding-top: 120px;
-            padding-bottom: 120px;
+            padding: 160px 20px;
+            background: linear-gradient(135deg, #0d6efd 0%, #011c45 100%);
+            color: #fff;
             text-align: center;
-            background: #0d6efd; /* Modern blue background */
-            color: white;
         }
 
         #home h1 {
-            font-size: 3rem;
-            font-weight: 700;
+            font-size: 3.2rem;
+            font-weight: 800;
+            animation: fadeInDown 0.8s ease;
         }
 
         #home p {
-            font-size: 1.25rem;
+            font-size: 1.3rem;
+            margin-top: 15px;
+            opacity: 0.9;
+            animation: fadeInUp 1s ease;
         }
 
-        /* SECTIONS */
+        .hero-buttons a {
+            margin: 10px;
+            font-size: 1.1rem;
+        }
+
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        /* Cards */
+        .glass-card {
+            background: rgba(255, 255, 255, 0.92);
+            padding: 30px;
+            border-radius: 16px;
+            border: 1px solid rgba(0, 0, 0, 0.08);
+            text-align: center;
+        }
+
         .section-title {
             font-weight: 700;
             font-size: 2rem;
             margin-bottom: 40px;
         }
 
-        .glass-card {
-            background: rgba(255, 255, 255, 0.85);
-            border-radius: 16px;
-            padding: 25px;
-            border: 1px solid rgba(0, 0, 0, 0.1);
-            transition: 0.3s;
-            text-align: center;
-        }
-
-        .glass-card:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 6px 20px rgba(0, 0, 0, 0.12);
-        }
-
-        .soft-section {
-            background: #f1f4f9;
-            padding: 60px 0;
-        }
-
         footer {
             background: #111;
             color: #ccc;
-            padding: 20px 0;
             text-align: center;
+            padding: 15px 0;
         }
 
-        html {
-            scroll-padding-top: 70px;
+        /* WhatsApp Floating Button */
+        .whatsapp-btn {
+            position: fixed;
+            bottom: 25px;
+            right: 25px;
+            background: #25D366;
+            color: white;
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 32px;
+            box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.3);
+            z-index: 9999;
+            text-decoration: none;
+        }
+
+        .whatsapp-btn:hover {
+            background: #1ebe5d;
         }
     </style>
 </head>
-
 
 <body>
 
     <!-- NAVBAR -->
     <header>
-    <nav class="navbar navbar-expand-lg container px-3">
-        <a class="navbar-brand fw-bold fs-4 text-white" >RDMWebTech.com</a>
-        <button class="navbar-toggler text-white" type="button" data-bs-toggle="offcanvas"
-            data-bs-target="#mobileMenu" aria-controls="mobileMenu">
-            <i class="bi bi-list fs-2"></i>
-        </button>
+        <nav class="navbar navbar-expand-lg container px-3">
+            <a class="navbar-brand fw-bold fs-4 text-white">RDMWebTech.com</a>
 
-        <!-- Desktop menu -->
-        <div class="collapse navbar-collapse justify-content-end d-none d-lg-flex" id="navMenu">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('home')">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('services')">Services</a></li>
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('technologies')">Technologies</a></li>
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('about')">About</a></li>
-                <li class="nav-item"><a class="nav-link" href="javascript:void(0)" onclick="scrollToSection('contact')">Contact</a></li>
-            </ul>
+            <button class="navbar-toggler text-white" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#mobileMenu">
+                <i class="bi bi-list fs-2"></i>
+            </button>
+
+            <div class="collapse navbar-collapse justify-content-end d-none d-lg-flex">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="" data-target="home">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" data-target="services">Services</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" data-target="technologies">Technologies</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" data-target="about">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="" data-target="contact">Contact</a></li>
+                </ul>
+            </div>
+        </nav>
+
+        <!-- Mobile Menu -->
+        <div class="offcanvas offcanvas-end text-bg-dark" id="mobileMenu">
+            <div class="offcanvas-header">
+                <h5 class="offcanvas-title">RDMWebTech.com</h5>
+                <button class="btn-close btn-close-white" data-bs-dismiss="offcanvas"></button>
+            </div>
+            <div class="offcanvas-body">
+                <a class="nav-link text-white mb-2" href="" data-target="home" data-bs-dismiss="offcanvas">Home</a>
+                <a class="nav-link text-white mb-2" href="" data-target="services" data-bs-dismiss="offcanvas">Services</a>
+                <a class="nav-link text-white mb-2" href="" data-target="technologies" data-bs-dismiss="offcanvas">Technologies</a>
+                <a class="nav-link text-white mb-2" href="" data-target="about" data-bs-dismiss="offcanvas">About</a>
+                <a class="nav-link text-white mb-2" href="" data-target="contact" data-bs-dismiss="offcanvas">Contact</a>
+            </div>
         </div>
-    </nav>
+    </header>
 
-    <!-- Mobile Offcanvas Menu -->
-    <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="mobileMenu" aria-labelledby="mobileMenuLabel">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title px-2" id="mobileMenuLabel">RDMWebTech.com</h5>
-            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas"
-                aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body px-3">
-            <ul class="navbar-nav">
-                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
-                        onclick="scrollToSection('home'); closeOffcanvas()">Home</a></li>
-                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
-                        onclick="scrollToSection('services'); closeOffcanvas()">Services</a></li>
-                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
-                        onclick="scrollToSection('technologies'); closeOffcanvas()">Technologies</a></li>
-                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
-                        onclick="scrollToSection('about'); closeOffcanvas()">About</a></li>
-                <li class="nav-item"><a class="nav-link text-white mb-2" href="javascript:void(0)"
-                        onclick="scrollToSection('contact'); closeOffcanvas()">Contact</a></li>
-            </ul>
-        </div>
-    </div>
-</header>
-
-
-    <!-- Smooth scroll JS -->
-    <script>
-        function scrollToSection(id) {
-            document.getElementById(id).scrollIntoView({ behavior: "smooth" });
-        }
-
-        function closeOffcanvas() {
-            const offcanvas = bootstrap.Offcanvas.getInstance(document.getElementById('mobileMenu'));
-            if (offcanvas) offcanvas.hide();
-        }
-    </script>
-
-    <!-- HERO SECTION -->
+    <!-- MODERN HERO SECTION -->
     <section id="home">
-        <div class="container text-center">
-            <h1>Modern Web Solutions for Your Business</h1>
-            <p>Scalable • Secure • Fast – Built with the Best Technologies</p>
+        <div class="container">
+            <h3>Build Powerful, Modern Web Applications</h3>
+            <p>High-performance • Secure • Scalable — Built with the latest technologies</p>
+
+            <div class="hero-buttons mt-4">
+                <a href="" data-target="services" class="btn btn-primary btn-lg px-4 py-2">Our Services</a>
+
+                <a href="https://wa.me/918179479516?text=Hello%20RDMWebTech%2C%20I%20am%20interested%20in%20your%20web%20development%20services."
+                    class="btn btn-outline-light btn-lg px-4 py-2" target="_blank">
+                    Contact on WhatsApp
+                </a>
+            </div>
         </div>
     </section>
 
     <!-- SERVICES -->
-    <section id="services" class="soft-section">
+    <section id="services" class="py-5">
         <div class="container">
-            <h2 class="text-center section-title">Our Services</h2>
+            <h2 class="section-title text-center">Our Services</h2>
             <div class="row g-4">
                 <div class="col-md-4">
                     <div class="glass-card">
-                        <i class="bi bi-window-sidebar fs-1 text-primary"></i>
+                        <i class="bi bi-window fs-1 text-primary"></i>
                         <h5 class="fw-bold mt-3">Web Development</h5>
                         <p>High-quality applications for businesses of any size.</p>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="glass-card">
                         <i class="bi bi-palette-fill fs-1 text-danger"></i>
                         <h5 class="fw-bold mt-3">UI / UX Design</h5>
-                        <p>Beautiful, responsive, and user-friendly design.</p>
+                        <p>Beautiful, responsive, user-friendly interfaces.</p>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="glass-card">
                         <i class="bi bi-hdd-network-fill fs-1 text-success"></i>
-                        <h5 class="fw-bold mt-3">Backend / API</h5>
-                        <p>Secure backend systems built with .NET Core & Cloud.</p>
+                        <h5 class="fw-bold mt-3">Backend & APIs</h5>
+                        <p>Secure backend systems with .NET Core & Cloud.</p>
                     </div>
                 </div>
             </div>
@@ -217,34 +244,38 @@
     <!-- TECHNOLOGIES -->
     <section id="technologies" class="py-5">
         <div class="container">
-            <h2 class="text-center section-title">Technologies We Use</h2>
+            <h2 class="section-title text-center">Technologies We Use</h2>
+
             <div class="row g-4 text-center">
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-braces fs-1 text-primary"></i>
                         <h5 class="fw-bold mt-3">Angular</h5>
-                        <p class="text-muted">Enterprise applications</p>
+                        <p>Enterprise applications</p>
                     </div>
                 </div>
+
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-lightning-fill fs-1 text-info"></i>
                         <h5 class="fw-bold mt-3">React</h5>
-                        <p class="text-muted">Fast single-page apps</p>
+                        <p>Fast SPA applications</p>
                     </div>
                 </div>
+
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-cpu-fill fs-1 text-dark"></i>
                         <h5 class="fw-bold mt-3">.NET Core</h5>
-                        <p class="text-muted">High-speed APIs</p>
+                        <p>High-performance APIs</p>
                     </div>
                 </div>
+
                 <div class="col-md-3">
                     <div class="glass-card">
                         <i class="bi bi-database-fill fs-1 text-success"></i>
                         <h5 class="fw-bold mt-3">SQL / Firebase</h5>
-                        <p class="text-muted">Secure database systems</p>
+                        <p>Secure databases</p>
                     </div>
                 </div>
             </div>
@@ -252,12 +283,12 @@
     </section>
 
     <!-- ABOUT -->
-    <section id="about" class="soft-section">
+    <section id="about" class="py-5 bg-light">
         <div class="container">
-            <h2 class="text-center section-title">About Us</h2>
+            <h2 class="section-title text-center">About Us</h2>
             <p class="text-center fs-5">
                 RDMWebTech delivers powerful modern web applications with clean code,
-                advanced UI, and scalable infrastructure for long-term growth.
+                strong UI, and scalable architecture for businesses.
             </p>
         </div>
     </section>
@@ -265,8 +296,10 @@
     <!-- CONTACT -->
     <section id="contact" class="py-5">
         <div class="container">
-            <h2 class="text-center section-title">Contact Information</h2>
+            <h2 class="section-title text-center">Contact Information</h2>
+
             <div class="row g-4 justify-content-center">
+
                 <div class="col-md-4">
                     <div class="glass-card">
                         <i class="bi bi-envelope-fill fs-1 text-primary"></i>
@@ -274,6 +307,7 @@
                         <p class="text-muted">ramana9000r@gmail.com</p>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="glass-card">
                         <i class="bi bi-telephone-fill fs-1 text-success"></i>
@@ -281,6 +315,7 @@
                         <p class="text-muted">8179479516</p>
                     </div>
                 </div>
+
                 <div class="col-md-4">
                     <div class="glass-card">
                         <i class="bi bi-geo-alt-fill fs-1 text-danger"></i>
@@ -288,6 +323,7 @@
                         <p class="text-muted">India</p>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
@@ -297,8 +333,25 @@
         <p class="mb-0">© 2025 RDMWebTech.com. All Rights Reserved.</p>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Floating WhatsApp Button -->
+    <a href="https://wa.me/918179479516?text=Hello%20RDMWebTech%2C%20I%20am%20interested%20in%20your%20web%20development%20services."
+        class="whatsapp-btn" target="_blank">
+        <i class="bi bi-whatsapp"></i>
+    </a>
 
+    <!-- SMOOTH SCROLL WITHOUT URL # -->
+    <script>
+        document.querySelectorAll('a[data-target]').forEach(link => {
+            link.addEventListener('click', function (e) {
+                e.preventDefault();
+                const id = this.getAttribute('data-target');
+                const target = document.getElementById(id);
+                if (target) target.scrollIntoView({ behavior: 'smooth' });
+            });
+        });
+    </script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
