--- a/index.html
+++ b/index.html
@@ -3,40 +3,38 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RDMWebTech.com – Modern Web Development</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>RDMWebTech.com – Modern Web Development</title>
 
-    <!-- SEO -->
-    <meta name="description"
-        content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
-    <meta name="keywords"
-        content="Web Development, UI/UX Design, Angular, React, .NET Core, MSSQL, Firebase, Modern Web Apps, RDMWebTech">
-    <meta name="author" content="RDMWebTech">
+<!-- SEO -->
+<meta name="description"
+    content="RDMWebTech delivers modern, scalable, and secure web applications using Angular, React, .NET Core, MSSQL, and Firebase.">
+<meta name="keywords"
+    content="Web Development, UI/UX Design, Angular, React, .NET Core, MSSQL, Firebase, Modern Web Apps, RDMWebTech">
+<meta name="author" content="RDMWebTech">
 
-    <!-- Open Graph -->
-    <meta property="og:title" content="RDMWebTech.com – Modern Web Development">
-    <meta property="og:description" content="Modern, scalable and secure web applications for businesses.">
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://rdmwebtech.com/">
-    <meta property="og:image" content="https://rdmwebtech.com/images/og-image.png">
+<!-- Open Graph -->
+<meta property="og:title" content="RDMWebTech.com – Modern Web Development">
+<meta property="og:description" content="Modern, scalable and secure web applications for businesses.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://rdmwebtech.com/">
+<meta property="og:image" content="https://rdmwebtech.com/images/og-image.png">
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
-<!-- Favicon & App Icons -->
-<link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="icon" href="https://rdmwebtech.com/assets/favicon.ico" type="image/x-icon">
+<!-- ✅ Correct Favicon (Root Folder Version – Google Recommended) -->
+<link rel="icon" href="/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 
-<link rel="icon" type="image/png" sizes="32x32" href="https://rdmwebtech.com/assets/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="https://rdmwebtech.com/assets/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
 
-<link rel="apple-touch-icon" sizes="180x180" href="https://rdmwebtech.com/assets/apple-touch-icon.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 
 <!-- SEO Preview Image -->
 <link rel="image_src" href="https://rdmwebtech.com/images/og-image.png">
 
-    <!-- Bootstrap + Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+<!-- Bootstrap + Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <style>
         :root {
