--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 
         /* ============ HERO SECTION ============ */
         .hero-section {
-            background: #ffffff;
+            background: #dc3545;
             padding: 60px 20px 50px;
             margin-top: 80px;
             position: relative;
@@ -328,7 +328,7 @@
         }
 
         body.dark-mode .hero-section {
-            background: var(--bg-dark);
+            background: #c82333;
         }
 
         .hero-section::before {
@@ -354,21 +354,16 @@
             font-weight: 800;
             line-height: 1.2;
             margin-bottom: 0.8rem;
-            background: linear-gradient(135deg, var(--text-light), #0d6efd);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            background-clip: text;
+            color: #ffffff;
         }
 
         body.dark-mode .hero-content h1 {
-            background: linear-gradient(135deg, var(--text-dark), #0dcaf0);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
+            color: #ffffff;
         }
 
         .hero-content p {
             font-size: 1rem;
-            color: var(--secondary-color);
+            color: #ffffff;
             margin-bottom: 1.2rem;
             max-width: 600px;
             text-align: center;
